[package]
name = "wss"
version = "0.1.0"
authors = ["mhoseinzadeh <mhoseinzadeh@ucsd.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros", "sync"] }
warp = "0.2"
pretty_env_logger = "0.4"
serde_json = "1.0"
futures = { version = "0.3", default-features = false }
md5 = "*"
hex = "*"
serde = { version = "1.0", features = ["derive"] }
pmem = { path = "../rust-pmem-master" }